--- a/fili-system-config/pom.xml
+++ b/fili-system-config/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.yahoo.fili</groupId>
         <artifactId>fili-parent-pom</artifactId>
-        <version>0.1.3</version>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
