--- a/fili-wikipedia-example/pom.xml
+++ b/fili-wikipedia-example/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.yahoo.fili</groupId>
         <artifactId>fili-parent-pom</artifactId>
-        <version>0.1.3</version>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -30,19 +30,19 @@
         <dependency>
             <groupId>com.yahoo.fili</groupId>
             <artifactId>fili</artifactId>
-            <version>${fili.version}</version>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>com.yahoo.fili</groupId>
             <artifactId>fili-core</artifactId>
-            <version>${fili.version}</version>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>com.yahoo.fili</groupId>
             <artifactId>fili-core</artifactId>
-            <version>${fili.version}</version>
+            <version>0.1-SNAPSHOT</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
