--- a/fili/pom.xml
+++ b/fili/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.yahoo.fili</groupId>
         <artifactId>fili-parent-pom</artifactId>
-        <version>0.1.3</version>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.yahoo.fili</groupId>
             <artifactId>fili-core</artifactId>
-            <version>${fili.version}</version>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
