--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.yahoo.fili</groupId>
     <artifactId>fili-parent-pom</artifactId>
-    <version>0.1.3</version>
+    <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Fili: parent pom</name>
     <description>Shared dependencies for the Fili libraries</description>
@@ -65,8 +65,6 @@
     </scm>
 
     <properties>
-        <fili.version>0.1.3</fili.version>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
         <version.slf4j>1.7.12</version.slf4j>
